--- a/client/index.html
+++ b/client/index.html
@@ -5,9 +5,18 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
+    <style>
+      #auth-tab {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
+    <div id="auth-tab"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
