--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
     <style>
-      #auth-tab {
+      .popup {
         position: absolute;
         top: 0;
         left: 0;
@@ -16,7 +16,8 @@
   </head>
   <body>
     <div id="root"></div>
-    <div id="auth-tab"></div>
+    <div class="popup" id="auth-tab"></div>
+    <div class="popup" id="incoming-call"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
