change: stream margin changed

--- a/client/index.html
+++ b/client/index.html
@@ -18,6 +18,7 @@
     <div id="root"></div>
     <div class="popup" id="auth-tab"></div>
     <div class="popup" id="incoming-call"></div>
+    <div class="popup" id="profile-popup"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
