style: implemented styles

--- a/client/index.html
+++ b/client/index.html
@@ -27,6 +27,7 @@
   <div class="popup" id="incoming-call"></div>
   <div class="popup pointer-events-none" id="call-status"></div>
   <div class="popup" id="profile-popup"></div>
+  <div class="popup" id="profile-popup__center"></div>
   <div class="popup" id="media-device-settings"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
