--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,14 @@
           'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
     })(window, document, 'script', 'dataLayer', 'GTM-WGBPLXGQ');
   </script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-1H6N66WFTE"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-1H6N66WFTE');
+  </script>
 
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/favicon.png" />
@@ -34,6 +42,8 @@
     }
   </style>
 </head>
+
+
 
 <body>
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WGBPLXGQ" height="0" width="0"
