--- a/client/index.html
+++ b/client/index.html
@@ -24,10 +24,10 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="title" content="Zuptalk | An Ultimate Platform For Interactive Audio Chats On YouTube Livestreams" />
   <meta name="description"
-    content="Learn how to talk on YouTube live streams with your audience in real time to make your live streams more engaging. Let's enhance your live stream audio chat experience with Zuptalk and connect like never before." />
-  <title>Zuptalk</title>
+    content="Learn how to talk on YouTube live streams with your audience in real time to make your live streams more engaging. Let's enhance your live stream audio chat experience with Zuptalk and connect like never before."
+    data-rh="true" />
+  <title>Zuptalk | An Ultimate Platform For Interactive Audio Chats On YouTube Livestreams</title>
   <style>
     .popup {
       position: absolute;
