--- a/client/index.html
+++ b/client/index.html
@@ -20,6 +20,116 @@
 
     gtag('config', 'G-1H6N66WFTE');
   </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Zuptalk",
+    "url": "https://zuptalk.com/",
+    "logo": "https://zuptalk.com/",
+    "alternateName": "Zuptalk",
+    "sameAs": [
+      "https://www.facebook.com/people/Zuptalk/61560386754484/",
+      "https://www.instagram.com/zup_talk/",
+      "https://www.youtube.com/@zuptalk24",
+      "https://x.com/zuptalk",
+      "https://in.pinterest.com/zuptalk/",
+      "https://www.linkedin.com/company/zuptalk/"
+    ],
+    "contactPoint": [
+      {
+        "@type": "ContactPoint",
+        "telephone": "",
+        "contactType": "sales",
+        "areaServed": [
+          "US",
+          "CA",
+          "IN"
+        ],
+        "availableLanguage": "en"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org/",
+    "@type": "WebSite",
+    "name": "Zuptalk",
+    "url": "https://zuptalk.com/",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://zuptalk.com/{search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org/",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "What is Zuptalk and how does it work?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Zuptalk is a tool that enables real-time audio chat during YouTube live streams. You can integrate with your live stream setup to allow voice interactions and make your streaming experience engaging directly with your audience easier."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What are the benefits of using Zuptalk during a YouTube livestream?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Using Zuptalk during a YouTube livestream you can enhance your engagement with your viewers by allowing real-time voice interactions with them and making the experience more interactive and personal. It helps in building a stronger connection with your audience & fans."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is Zuptalk suitable for all types of YouTube live streams?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes, Zuptalk is suitable for all types of live-streaming platforms. You just need to create a streaming link for your live stream link, and then you can connect with your audience via audio chat."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Do I need any special setup or equipment to use Zuptalk?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "You don't need special equipment to use Zuptalk for audio chat on YouTube live streams.Simply have your live streaming link, a microphone, and internet access.A high- quality microphone is recommended for clear communication."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How does Zuptalk compare to traditional text chat in YouTube live streams?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Zuptalk offers a more personal and interactive experience compared to traditional text chat. By using real-time voice chat, you can create a stronger connection with your audience, making your livestream more engaging and memorable."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How does Zuptalk enhance viewer engagement on YouTube live streams?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Zuptalk enhances viewer engagement by allowing real - time voice chats during live streams.This makes interactions more personal and dynamic, helping you connect with your audience on a deeper level.It’s a great way to engage with viewers on YouTube Live and create a more interactive streaming experience."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How can I set up Zuptalk for my YouTube live streams?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "To set up Zuptalk, the simple steps are given below:  1. Sign up at Zuptalk.  2. Access your creator dashboard.  3. Enter your YouTube live stream link into Zuptalk and submit.  4. Copy the generated stream link.  5. Share the stream link with your audience to join the conversation via audio chat.  6. Engage with viewers in real time once they accept the invitation."
+        }
+      }
+    ]
+  }
+  </script>
+
+
 
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/favicon.png" />
